# xlsform-translator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
xlsform_translator/: __init__.py  cli.py  parser.py  translator.py  writer.py
xlsform_translator/engines/: __init__.py  azure.py  base.py  claude.py  deepl_engine.py  google.py  openai_engine.py
