[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "xlsform-translator"
version = "0.1.0"
description = "Translate XLSForm survey files using AI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "langcodes[data]>=3.3.0",
]

[project.optional-dependencies]
claude  = ["anthropic>=0.25.0"]
openai  = ["openai>=1.0.0"]
deepl   = ["deepl>=1.17.0"]
all     = ["anthropic>=0.25.0", "openai>=1.0.0", "deepl>=1.17.0"]

[project.scripts]
xlsform-translator = "xlsform_translator.cli:run"
